--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 .hero {
     position: relative;
     height: 100vh;
-    background: url('images/car.jpg') no-repeat center center/cover;
+    background: url('car.jpg') no-repeat center center/cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -532,3 +532,4 @@ body {
         margin-top: 10px;
     }
 }
+
